tests/macro-tests/cases/widget_new/error_first_token.stderr
error: expected property or when
 --> cases/widget_new/error_first_token.rs:5:9
  |
5 |         =
  |         ^

error: expected property path
  --> cases/widget_new/error_first_token.rs:12:13
   |
12 |             =
   |             ^
